--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -3,7 +3,15 @@
   <h2>Our Latest Collection</h2>
 
   <mat-form-field>
-<input matInput (keyup)="applyFilter($event)" placeholder="Search">
+    <input matInput (keyup)="applyFilter($event)" placeholder="Search">
+  </mat-form-field>
+
+  <mat-form-field class="sort-dropdown">
+    <mat-select (selectionChange)="sortProducts($event.value)">
+      <mat-option value="priceLowHigh">Price: Low to High</mat-option>
+      <mat-option value="priceHighLow">Price: High to Low</mat-option>
+    </mat-select>
+
   </mat-form-field>
   <div fxLayout="row wrap" fxLayoutGap="50px grid">
     <div *ngFor="let product of filteredProducts">
